--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -2,11 +2,10 @@
     display: flex;
 }
 
-.contain{
-    overflow-y: auto;
-    width: 50vw;
-}
 
-.blank{
-    height:120px;
-}
+
+@media only screen and (max-width: 600px) {
+    .home{
+        display: block;
+    }
+  }
