--- a/src/components/HomeContent/homecontent.css
+++ b/src/components/HomeContent/homecontent.css
@@ -15,6 +15,7 @@
 }
 
 
+
 .nameContainer{
     z-index: 99;
     font-size: 30px;
@@ -84,3 +85,93 @@
     margin-top: 34px;
     margin-bottom: 40px;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .homeContent{
+        overflow-y: auto;
+        background: #373B40;
+        height: 100vh;
+        width: 100vw;
+        border-left: 1px solid grey;
+        text-align: center;
+        
+    } 
+
+    .nameContainer{
+        z-index: 99;
+        font-size: 20px;
+        background: #373B40;
+        /* background: red; */
+        padding: 0px;
+        padding-left: 0px;
+        color: white;
+        margin-top: 0px;
+        text-align: center;
+        border-radius: 0px;
+        
+    }
+
+    .designation{
+        padding-left: 0px;
+        text-align: center;
+        width: fit-content;
+        margin-left: 0rem;
+        font-weight: bold;
+        font-size: 17px;
+        color: #ffca18;
+    }
+    
+    .designation-text{
+        text-align: center;
+        display: inline-block;
+          overflow: hidden;
+          letter-spacing: 2px;
+         animation: typing 2s steps(30, end), blink .75s step-end infinite;
+        white-space: nowrap;
+        font-size: 17px;
+        font-weight: bold;
+        border-right: 1px solid #ffca18;
+        /* box-sizing: border-box; */
+    }
+    
+    
+    @keyframes typing {
+        from { 
+            width: 0% 
+        }
+        to { 
+            width: 100% 
+        }
+    }
+    
+    @keyframes blink {
+        from, to { 
+            border-color: transparent 
+        }
+        50% { 
+            border-color: #ffca18; 
+        }
+    }
+    
+    
+    .description{
+        margin-top: 24px;
+        margin-left: 0rem;
+        font-weight: bold;
+        color: #f5f5f5;
+        font-size: 14px;
+        width: 300px;
+    }
+    
+    .button{ 
+        display: flex;
+        justify-content: space-between;
+        margin-left: 4rem;
+        margin-right: 4rem;
+        margin-top: 34px;
+        margin-bottom: 40px;
+    }
+    
+    
+  }
