--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -10,3 +10,24 @@
     margin-top: 20px;
     
 }
+
+
+
+ /* /////////////////////////////////////Mobile design/////////////////////////////////////// */
+
+
+ @media only screen and (max-width: 600px) {
+    .contact{
+        text-align: center;
+        margin-left: 0rem;
+        margin-bottom: 60px;
+    }
+    
+    .call-btn{
+        background-color: #373B40;
+        font-size: 20px;
+        margin-right: 0px;
+        margin-top: 20px;
+        
+    }
+ }
