--- a/src/components/HomeSocials/homesocials.css
+++ b/src/components/HomeSocials/homesocials.css
@@ -25,3 +25,37 @@
 .socials:hover{
     color:#ffca18;
 }
+
+
+/* ///////////////////////////////Mobile screen///////////////////////////////////////////////////// */
+
+@media only screen and (max-width: 600px) {
+    .homeSocials{
+        background: #373B40;
+        width: 100vw;
+        height: auto;
+        text-align: center;
+        font-size: 30px;
+        max-height: 100%;
+        min-height: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content:space-around;
+    
+    }
+    
+    
+    .socials{
+        color:#ffc9188f;
+        cursor: pointer;
+        margin-top: 50px;
+        margin-right: 20px;
+        margin-bottom: 30px;
+    }
+    
+    .socials:hover{
+        color:#ffca18;
+    }
+    
+}
